Compiler warnings cleanup.