@@ -467,7 +467,6 @@ public class NavigableImagePanel extends JPanel {
      *
      * @param image an image to be set in the panel
      * @param imageFile
-     * @param method
      */
     public void setImage(BufferedImage image, File imageFile, boolean showNonScaled, boolean rotateAccordingExifAtImageLoad, Method highQualityScalingMethodToUse) {
         BufferedImage oldImage = this.image;
@@ -649,7 +648,7 @@ public class NavigableImagePanel extends JPanel {
         originX += (correctedP.getIntX() - (int)panelP.x);
         originY += (correctedP.getIntY() - (int)panelP.y);
 
-        firePropertyChange(ZOOM_LEVEL_CHANGED_PROPERTY, new Double(oldZoom), new Double(getZoom()));
+        firePropertyChange(ZOOM_LEVEL_CHANGED_PROPERTY, Double.valueOf(oldZoom), Double.valueOf(getZoom()));
         repaint();
     }
 
@@ -670,7 +669,7 @@ public class NavigableImagePanel extends JPanel {
     public void setZoomIncrement(double newZoomIncrement) {
         double oldZoomIncrement = zoomIncrement;
         zoomIncrement = newZoomIncrement;
-        firePropertyChange(ZOOM_INCREMENT_CHANGED_PROPERTY, new Double(oldZoomIncrement), new Double(zoomIncrement));
+        firePropertyChange(ZOOM_INCREMENT_CHANGED_PROPERTY, Double.valueOf(oldZoomIncrement), Double.valueOf(zoomIncrement));
     }
 
     //Zooms an image in the panel by repainting it at the new zoom level.
@@ -684,8 +683,8 @@ public class NavigableImagePanel extends JPanel {
         originX += (mousePosition.x - (int)panelP.x);
         originY += (mousePosition.y - (int)panelP.y);
 
-        firePropertyChange(ZOOM_LEVEL_CHANGED_PROPERTY, new Double(oldZoom),
-            new Double(getZoom()));
+        firePropertyChange(ZOOM_LEVEL_CHANGED_PROPERTY, Double.valueOf(oldZoom),
+            Double.valueOf(getZoom()));
 
         repaint();
     }
